--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp product && node ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test nyc --require babel-core/register --reporter=text --reporter=html ./node_modules/.bin/mocha --recursive --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,14 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "cross-env": "^4.0.0",
+    "enzyme": "^2.8.0",
+    "expect": "^1.20.2",
     "gulp": "^3.9.1",
+    "jsdom": "^9.12.0",
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
+    "react-addons-test-utils": "^15.4.2",
     "webpack": "^2.3.2",
     "webpack-stream": "^3.2.0"
   }
